HelloUltraviolet/Fixtures/RejectedSource/Parsing/EnumCommaSeparator/Source/Main.uv
//! Rejected enum specimen for comma-separated top-level variants.

public enum CommaSeparatedEnumPayload {
    First,
    Second
}
